@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-14T16:08:52Z",
+  "timestamp" : "2023-08-15T00:34:44Z",
   "count_outdated" : 4888,
   "uniques_outdated" : 1446,
-  "count" : 5018,
+  "count" : 5019,
   "uniques" : 1536,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 5, 6 ],
-      "count_decinc": [ 0, 6 ],
+      "count": 7,
+      "count_minmax": [ 5, 7 ],
+      "count_decinc": [ 0, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ],
       "uniques_decinc": [ 0, 5 ]
